--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -1,10 +1,13 @@
 .search {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  
   background-image: linear-gradient(150deg, blue, yellow);
   height: 100px;
 }
+.search>.container{ 
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;}
 .search__form {
   position: relative;
   width: 400px;
