--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -1,31 +1,34 @@
-.container{
-    width: 1170px ;
-margin: 0 auto;
+.container {
+  width: 1170px;
+  margin: 0 auto;
 }
-.gallery{
-    display: flex;
-    @include first_item_gridFlex ();
- width: 1200;
+
+.gallery {
+  display: flex;
+  @include first_item_gridFlex();
+  width: 1200;
 }
-img{
-    object-fit: cover;
-    width: 350px;
+img {
+  object-fit: cover;
+  width: 350px;
 }
-.photo-card{
-    width: 350px;
-@include gridFlex(3);
+.photo-card {
+  width: 350px;
+  height: 350px;
+  @include gridFlex(3);
 }
-section{
-    margin: 0 auto;
+section {
+  position: relative;
+  top: 115px;
+  margin: 0 auto;
+  padding: 15px;
 }
-.info{
-     width: 350px;
-     @include first_item_gridFlex ();
-     flex-wrap: nowrap;
+.info {
+  width: 350px;
+  @include first_item_gridFlex();
+  flex-wrap: nowrap;
 }
-.info-item{
-   @include gridFlex(4);
+.info-item {
+  @include gridFlex(4);
   text-align: center;
-  
-   
 }
