--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -8,7 +8,10 @@
       placeholder="Search images..."
       class="search__input"
     />
-    <button type="submit" class="search__btn">&#128269</button>
+    <button type="submit" class="search__btn"><div class="spinner-border text-primary visually-hidden" role="status">
+  <span class="visually-hidden"></span>
+</div>&#128269</button>
+    
   </form>
 </div>
 </header>
