--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -2,7 +2,12 @@
   width: 1170px;
   margin: 0 auto;
 }
-
+section {
+  position: relative;
+  top: 115px;
+  margin: 0 auto;
+  padding: 15px;
+}
 .gallery {
   display: flex;
   @include first_item_gridFlex();
@@ -15,18 +20,20 @@ img {
 .photo-card {
   width: 350px;
   height: 350px;
+  margin-bottom: 15px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 5px;
+  background-color: rgb(217, 214, 214);
   @include gridFlex(3);
 }
-section {
-  position: relative;
-  top: 115px;
-  margin: 0 auto;
-  padding: 15px;
-}
+
 .info {
   width: 350px;
   @include first_item_gridFlex();
   flex-wrap: nowrap;
+  margin-left: -15px;
 }
 .info-item {
   @include gridFlex(4);
